--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -348,6 +348,27 @@
                         android:text="@string/Anleitung8"
                         android:layout_height="wrap_content" />
                 </LinearLayout>
+
+                <LinearLayout
+                    style="@android:style/ButtonBar"
+                    android:layout_width="match_parent"
+                    android:layout_height="fill_parent"
+                    android:background="@color/black"
+                    android:orientation="horizontal" >
+                    <TextView
+                        android:id="@+id/step14Title"
+                        android:textColor="@color/white"
+                        android:textStyle="bold"
+                        android:layout_width="wrap_content"
+                        android:text=""
+                        android:layout_height="wrap_content" />
+                    <TextView
+                        android:id="@+id/step14"
+                        android:textColor="@color/white"
+                        android:layout_width="wrap_content"
+                        android:text="@string/Anleitung9"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
             </LinearLayout>
         </ScrollView>
     </FrameLayout>
