--- a/app/src/main/res/xml-de/intro.xml
+++ b/app/src/main/res/xml-de/intro.xml
@@ -14,6 +14,7 @@ Unterhalb der Linie solltest du noch etwas tun, und oberhalb der Linie ist dein 
     <step id="8.1">Bei dem Gefühl geht die Skala von -2 bis +2 und dein Ergebnis sollte oberhalb der gelben Linie liegen.</step>
     <step id="8.2">Die verstrichene Zeit wird im unteren und die maximale Zeit im oberen Ende des Balkens angezeigt, man sollte unterhalb der gelben Linie bleiben.</step>
     <step id="8.3">Bei der Richtigkeit solltest du oberhalb der gelben Linie sein. Mit einem Tippen auf die Statistik werden dir verschiedenen Diagramme angezeigt.</step>
-    <step id="Impressum:">An der App-Entwicklung beteiligte Personen: Tobias Kutzner, Christian Steinert, Abdellah Azendour, Carlos Trujillo, Lando Eisenmann, Prof. Dr.-Ing. Ingrid Bönninger, Prof. Dr. habil. Olga Wälder, Prof. Dr. Annemarie Jost</step>
+    <step id="9">Mit dem Neu Button kannst du von vorn beginnen, dabei werden die Aufgaben in den Tests neu gemischt somit bekommst du andere Aufgaben als zuvor.</step>
+    <step id="Impressum:">An der App-Entwicklung beteiligte Personen: Tobias Kutzner, Christian Steinert, Abdellah Azendour, Carlos Trujillo, Jacqueline Bothe, Prof. Dr.-Ing. Ingrid Bönninger, Prof. Dr. habil. Olga Wälder, Dr. rer. nat. Bodo Wolf</step>
     <step id=" Kontakt:    "> Tobias.Kutzner@b-tu.de</step>
 </instruction>
