--- a/app/src/main/res/xml-de/test02.xml
+++ b/app/src/main/res/xml-de/test02.xml
@@ -3,73 +3,163 @@
 <test id="1" lang="deutsch">
 	<aufgaben>
 		<aufgabe id="1">
-			<text></text>
-			<bild></bild>
+			<text>Aufgabe 1</text>
+			<bild>test02aufgabe01</bild>
 			<hilfe>
+				<value>https://www.b-tu.de/</value>
+				<value>https://www.b-tu.de/</value>
 			</hilfe>
-			<loesung></loesung>
-			<time></time>
-			<avguc></avguc>
+			<loesung>test02loesung01</loesung>
+			<time>1</time>
+			<avguc>10</avguc>
 			<avgdc></avgdc>
-			<avguf></avguf>
+			<avguf>2</avguf>
 			<avgdf></avgdf>
-			<avgut></avgut>
+			<avgut>0.1</avgut>
 			<avgdt></avgdt>
 		</aufgabe>
 		<aufgabe id="2">
-			<text></text>
-			<bild></bild>
+			<text>Aufgabe 2</text>
+			<bild>test02aufgabe02</bild>
 			<hilfe>
+				<value>https://www.b-tu.de/</value>
+				<value>https://www.b-tu.de/</value>
 			</hilfe>
-			<loesung></loesung>
-			<time></time>
-			<avguc></avguc>
+			<loesung>test02loesung02</loesung>
+			<time>1</time>
+			<avguc>20</avguc>
 			<avgdc></avgdc>
-			<avguf></avguf>
+			<avguf>1</avguf>
 			<avgdf></avgdf>
-			<avgut></avgut>
+			<avgut>0.2</avgut>
 			<avgdt></avgdt>
 		</aufgabe>
 		<aufgabe id="3">
-			<text></text>
-			<bild></bild>
+			<text>Aufgabe 3</text>
+			<bild>test02aufgabe03</bild>
 			<hilfe>
+				<value>https://www.b-tu.de/</value>
+				<value>https://www.b-tu.de/</value>
 			</hilfe>
-			<loesung></loesung>
-			<time></time>
-			<avguc></avguc>
+			<loesung>test02loesung03</loesung>
+			<time>1</time>
+			<avguc>30</avguc>
 			<avgdc></avgdc>
-			<avguf></avguf>
+			<avguf>0</avguf>
 			<avgdf></avgdf>
-			<avgut></avgut>
+			<avgut>0.3</avgut>
 			<avgdt></avgdt>
 		</aufgabe>
 		<aufgabe id="4">
-			<text></text>
-			<bild></bild>
+			<text>Aufgabe 4</text>
+			<bild>test02aufgabe04</bild>
 			<hilfe>
+				<value>https://www.b-tu.de/</value>
+				<value>https://www.b-tu.de/</value>
 			</hilfe>
-			<loesung></loesung>
-			<time></time>
-			<avguc></avguc>
+			<loesung>test02loesung04</loesung>
+			<time>1</time>
+			<avguc>40</avguc>
 			<avgdc></avgdc>
-			<avguf></avguf>
+			<avguf>-1</avguf>
 			<avgdf></avgdf>
-			<avgut></avgut>
+			<avgut>0.4</avgut>
 			<avgdt></avgdt>
 		</aufgabe>
 		<aufgabe id="5">
-			<text></text>
-			<bild></bild>
+			<text>Aufgabe 5</text>
+			<bild>test02aufgabe05</bild>
 			<hilfe>
+				<value>https://www.b-tu.de/</value>
+				<value>https://www.b-tu.de/</value>
 			</hilfe>
-			<loesung></loesung>
-			<time></time>
-			<avguc></avguc>
+			<loesung>test02loesung05</loesung>
+			<time>1</time>
+			<avguc>50</avguc>
 			<avgdc></avgdc>
-			<avguf></avguf>
+			<avguf>-2</avguf>
 			<avgdf></avgdf>
-			<avgut></avgut>
+			<avgut>0.5</avgut>
+			<avgdt></avgdt>
+		</aufgabe>
+		<aufgabe id="6">
+			<text>Aufgabe 6</text>
+			<bild>test02aufgabe06</bild>
+			<hilfe>
+				<value>https://www.b-tu.de/</value>
+				<value>https://www.b-tu.de/</value>
+			</hilfe>
+			<loesung>test02loesung06</loesung>
+			<time>1</time>
+			<avguc>60</avguc>
+			<avgdc></avgdc>
+			<avguf>-1</avguf>
+			<avgdf></avgdf>
+			<avgut>0.6</avgut>
+			<avgdt></avgdt>
+		</aufgabe>
+		<aufgabe id="7">
+			<text>Aufgabe 7</text>
+			<bild>test02aufgabe07</bild>
+			<hilfe>
+				<value>https://www.b-tu.de/</value>
+				<value>https://www.b-tu.de/</value>
+			</hilfe>
+			<loesung>test02loesung07</loesung>
+			<time>1</time>
+			<avguc>70</avguc>
+			<avgdc></avgdc>
+			<avguf>0</avguf>
+			<avgdf></avgdf>
+			<avgut>0.7</avgut>
+			<avgdt></avgdt>
+		</aufgabe>
+		<aufgabe id="8">
+			<text>Aufgabe 8</text>
+			<bild>test02aufgabe08</bild>
+			<hilfe>
+				<value>https://www.b-tu.de/</value>
+				<value>https://www.b-tu.de/</value>
+			</hilfe>
+			<loesung>test02loesung08</loesung>
+			<time>1</time>
+			<avguc>80</avguc>
+			<avgdc></avgdc>
+			<avguf>1</avguf>
+			<avgdf></avgdf>
+			<avgut>0.8</avgut>
+			<avgdt></avgdt>
+		</aufgabe>
+		<aufgabe id="9">
+			<text>Aufgabe 9</text>
+			<bild>test02aufgabe09</bild>
+			<hilfe>
+				<value>https://www.b-tu.de/</value>
+				<value>https://www.b-tu.de/</value>
+			</hilfe>
+			<loesung>test02loesung09</loesung>
+			<time>1</time>
+			<avguc>90</avguc>
+			<avgdc></avgdc>
+			<avguf>2</avguf>
+			<avgdf></avgdf>
+			<avgut>0.9</avgut>
+			<avgdt></avgdt>
+		</aufgabe>
+		<aufgabe id="10">
+			<text>Aufgabe 10</text>
+			<bild>test02aufgabe10</bild>
+			<hilfe>
+				<value>https://www.b-tu.de/</value>
+				<value>https://www.b-tu.de/</value>
+			</hilfe>
+			<loesung>test02loesung10</loesung>
+			<time>1</time>
+			<avguc>100</avguc>
+			<avgdc></avgdc>
+			<avguf>1</avguf>
+			<avgdf></avgdf>
+			<avgut>1</avgut>
 			<avgdt></avgdt>
 		</aufgabe>
 	</aufgaben>
