--- a/app/src/main/res/xml-de/pool01.xml
+++ b/app/src/main/res/xml-de/pool01.xml
@@ -3,7 +3,7 @@
 <test id="1" lang="deutsch">
     <aufgaben>
         <aufgabe id="1">
-            <text>Pool01</text>
+            <text>Aufgabe 01</text>
             <bild>pool01aufgabe01</bild>
             <hilfe>
                 <value>https://www.b-tu.de/</value>
@@ -19,7 +19,7 @@
             <avgdt></avgdt>
         </aufgabe>
         <aufgabe id="2">
-            <text>Pool02</text>
+            <text>Aufgabe 02</text>
             <bild>pool01aufgabe02</bild>
             <hilfe>
                 <value>https://www.b-tu.de/</value>
@@ -35,7 +35,7 @@
             <avgdt></avgdt>
         </aufgabe>
         <aufgabe id="3">
-            <text>Pool03</text>
+            <text>Aufgabe 03</text>
             <bild>pool01aufgabe03</bild>
             <hilfe>
                 <value>https://www.b-tu.de/</value>
@@ -51,7 +51,7 @@
             <avgdt></avgdt>
         </aufgabe>
         <aufgabe id="4">
-            <text>Pool04</text>
+            <text>Aufgabe 04</text>
             <bild>pool01aufgabe04</bild>
             <hilfe>
                 <value>https://www.b-tu.de/</value>
@@ -67,7 +67,7 @@
             <avgdt></avgdt>
         </aufgabe>
         <aufgabe id="5">
-            <text>Pool05</text>
+            <text>Aufgabe 05</text>
             <bild>pool01aufgabe05</bild>
             <hilfe>
                 <value>https://www.b-tu.de/</value>
