--- a/app/src/main/res/xml/pool02.xml
+++ b/app/src/main/res/xml/pool02.xml
@@ -3,73 +3,83 @@
 <test id="1" lang="deutsch">
 	<aufgaben>
 		<aufgabe id="1">
-			<text></text>
-			<bild></bild>
+			<text>01</text>
+			<bild>pool02aufgabe01</bild>
 			<hilfe>
+				<value>https://www.b-tu.de/</value>
 			</hilfe>
-			<loesung></loesung>
+			<loesung>pool02loesung01</loesung>
 			<time></time>
-			<avguc></avguc>
+			<time>1</time>
+			<avguc>100</avguc>
 			<avgdc></avgdc>
-			<avguf></avguf>
+			<avguf>1</avguf>
 			<avgdf></avgdf>
-			<avgut></avgut>
+			<avgut>1</avgut>
 			<avgdt></avgdt>
 		</aufgabe>
 		<aufgabe id="2">
-			<text></text>
-			<bild></bild>
+			<text>02</text>
+			<bild>pool02aufgabe02</bild>
 			<hilfe>
+				<value>https://www.b-tu.de/</value>
 			</hilfe>
-			<loesung></loesung>
+			<loesung>pool02loesung02</loesung>
 			<time></time>
-			<avguc></avguc>
+			<time>1</time>
+			<avguc>100</avguc>
 			<avgdc></avgdc>
-			<avguf></avguf>
+			<avguf>1</avguf>
 			<avgdf></avgdf>
-			<avgut></avgut>
+			<avgut>1</avgut>
 			<avgdt></avgdt>
 		</aufgabe>
 		<aufgabe id="3">
-			<text></text>
-			<bild></bild>
+			<text>03</text>
+			<bild>pool02aufgabe03</bild>
 			<hilfe>
+				<value>https://www.b-tu.de/</value>
 			</hilfe>
-			<loesung></loesung>
+			<loesung>pool02loesung03</loesung>
 			<time></time>
-			<avguc></avguc>
+			<time>1</time>
+			<avguc>100</avguc>
 			<avgdc></avgdc>
-			<avguf></avguf>
+			<avguf>1</avguf>
 			<avgdf></avgdf>
-			<avgut></avgut>
+			<avgut>1</avgut>
 			<avgdt></avgdt>
 		</aufgabe>
 		<aufgabe id="4">
-			<text></text>
-			<bild></bild>
+			<text>04</text>
+			<bild>pool02aufgabe04</bild>
 			<hilfe>
+				<value>https://www.b-tu.de/</value>
 			</hilfe>
-			<loesung></loesung>
+			<loesung>pool02loesung04</loesung>
 			<time></time>
-			<avguc></avguc>
+			<time>1</time>
+			<avguc>100</avguc>
 			<avgdc></avgdc>
-			<avguf></avguf>
+			<avguf>1</avguf>
 			<avgdf></avgdf>
-			<avgut></avgut>
+			<avgut>1</avgut>
 			<avgdt></avgdt>
 		</aufgabe>
 		<aufgabe id="5">
-			<text></text>
-			<bild></bild>
+			<text>05</text>
+			<bild>pool02aufgabe05</bild>
 			<hilfe>
+				<value>https://www.b-tu.de/</value>
 			</hilfe>
-			<loesung></loesung>
+			<loesung>pool02loesung05</loesung>
 			<time></time>
-			<avguc></avguc>
+			<time>1</time>
+			<avguc>100</avguc>
 			<avgdc></avgdc>
-			<avguf></avguf>
+			<avguf>1</avguf>
 			<avgdf></avgdf>
-			<avgut></avgut>
+			<avgut>1</avgut>
 			<avgdt></avgdt>
 		</aufgabe>
 	</aufgaben>
