Corrections in name and changeOrder function

--- a/app/src/main/res/xml-de/pool02.xml
+++ b/app/src/main/res/xml-de/pool02.xml
@@ -6,7 +6,9 @@
 			<text>01</text>
 			<bild>pool02aufgabe01</bild>
 			<hilfe>
-				<value>https://www.b-tu.de/</value>
+				<value>http://www.metric-conversions.org/de/</value>
+				<value>https://www.convertworld.com/de/</value>
+				<value>https://www.einheiten-umrechnen.de/</value>
 			</hilfe>
 			<loesung>pool02loesung01</loesung>
 			<time></time>
@@ -22,7 +24,9 @@
 			<text>02</text>
 			<bild>pool02aufgabe02</bild>
 			<hilfe>
-				<value>https://www.b-tu.de/</value>
+				<value>http://www.metric-conversions.org/de/</value>
+				<value>https://www.convertworld.com/de/</value>
+				<value>https://www.einheiten-umrechnen.de/</value>
 			</hilfe>
 			<loesung>pool02loesung02</loesung>
 			<time></time>
@@ -38,7 +42,9 @@
 			<text>03</text>
 			<bild>pool02aufgabe03</bild>
 			<hilfe>
-				<value>https://www.b-tu.de/</value>
+				<value>http://www.metric-conversions.org/de/</value>
+				<value>https://www.convertworld.com/de/</value>
+				<value>https://www.einheiten-umrechnen.de/</value>
 			</hilfe>
 			<loesung>pool02loesung03</loesung>
 			<time></time>
@@ -54,7 +60,9 @@
 			<text>04</text>
 			<bild>pool02aufgabe04</bild>
 			<hilfe>
-				<value>https://www.b-tu.de/</value>
+				<value>http://www.metric-conversions.org/de/</value>
+				<value>https://www.convertworld.com/de/</value>
+				<value>https://www.einheiten-umrechnen.de/</value>
 			</hilfe>
 			<loesung>pool02loesung04</loesung>
 			<time></time>
@@ -70,7 +78,9 @@
 			<text>05</text>
 			<bild>pool02aufgabe05</bild>
 			<hilfe>
-				<value>https://www.b-tu.de/</value>
+				<value>http://www.metric-conversions.org/de/</value>
+				<value>https://www.convertworld.com/de/</value>
+				<value>https://www.einheiten-umrechnen.de/</value>
 			</hilfe>
 			<loesung>pool02loesung05</loesung>
 			<time></time>
