--- a/app/src/main/res/xml-de/pool01.xml
+++ b/app/src/main/res/xml-de/pool01.xml
@@ -6,7 +6,9 @@
             <text>Aufgabe 01</text>
             <bild>pool01aufgabe01</bild>
             <hilfe>
-                <value>https://www.b-tu.de/</value>
+                <value>http://www.metric-conversions.org/de/</value>
+                <value>https://www.convertworld.com/de/</value>
+                <value>https://www.einheiten-umrechnen.de/</value>
             </hilfe>
             <loesung>pool01loesung01</loesung>
             <time></time>
@@ -22,7 +24,9 @@
             <text>Aufgabe 02</text>
             <bild>pool01aufgabe02</bild>
             <hilfe>
-                <value>https://www.b-tu.de/</value>
+                <value>http://www.metric-conversions.org/de/</value>
+                <value>https://www.convertworld.com/de/</value>
+                <value>https://www.einheiten-umrechnen.de/</value>
             </hilfe>
             <loesung>pool01loesung02</loesung>
             <time></time>
@@ -38,7 +42,9 @@
             <text>Aufgabe 03</text>
             <bild>pool01aufgabe03</bild>
             <hilfe>
-                <value>https://www.b-tu.de/</value>
+                <value>http://www.metric-conversions.org/de/</value>
+                <value>https://www.convertworld.com/de/</value>
+                <value>https://www.einheiten-umrechnen.de/</value>
             </hilfe>
             <loesung>pool01loesung03</loesung>
             <time></time>
@@ -54,7 +60,9 @@
             <text>Aufgabe 04</text>
             <bild>pool01aufgabe04</bild>
             <hilfe>
-                <value>https://www.b-tu.de/</value>
+                <value>http://www.metric-conversions.org/de/</value>
+                <value>https://www.convertworld.com/de/</value>
+                <value>https://www.einheiten-umrechnen.de/</value>
             </hilfe>
             <loesung>pool01loesung04</loesung>
             <time></time>
@@ -70,7 +78,9 @@
             <text>Aufgabe 05</text>
             <bild>pool01aufgabe05</bild>
             <hilfe>
-                <value>https://www.b-tu.de/</value>
+                <value>http://www.metric-conversions.org/de/</value>
+                <value>https://www.convertworld.com/de/</value>
+                <value>https://www.einheiten-umrechnen.de/</value>
             </hilfe>
             <loesung>pool01loesung05</loesung>
             <time></time>
